{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player1",
            "id": "b71dd1cc-5038-40c5-8208-6d4b67a88ad9",
            "actions": [
                {
                    "name": "Vertical",
                    "type": "Value",
                    "id": "9176bd1f-4fc0-4ee0-adf1-a5619e11d63e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Horizontal",
                    "type": "Value",
                    "id": "11701bf8-0c5b-431d-8f0e-494af6eeab07",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a24f4daf-64ea-476b-a3ac-df08eaf1cec3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "e28aa582-5016-414a-bc7d-a108346e11a6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f3d88139-afcb-4a23-93cd-65e13cfa1f96",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ab9f8c35-aa25-4911-8c86-eb2e994bc95e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "23ed3c11-2132-4c2d-8475-a05222c372aa",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "20f303f4-1802-41ed-bf58-e3918ccb019f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0e61857f-102c-4889-b525-778130da9754",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fbf8d7e4-de4c-4b12-92e1-8ed272bf8781",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "0862bacb-37ef-451f-b786-4d54dcfec2ab",
            "actions": [
                {
                    "name": "Vertical",
                    "type": "Value",
                    "id": "8493a5f2-dbbd-41dc-85d2-36e134380cc7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Horizontal",
                    "type": "Value",
                    "id": "70fc33b7-673f-4c41-a9ca-fa1312eef005",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5a1c2a19-ca9e-4448-ba00-f156752324e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "57e11fa3-7edb-4721-9081-1226ae6944ac",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e4b74183-df68-4e9f-8779-6567153ad99e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "180282ae-b6b1-4a85-a7fc-5f4032455b0a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "d91df334-7883-451e-9a00-f260c63ec67a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bcb79b00-eb34-4197-9e4a-9c1f956bf2e4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c85cf090-f3c7-4603-96bb-e434387d9230",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "85997a66-b67d-4ce8-bf3d-01716873550a",
                    "path": "<Keyboard>/numpad0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Rollback",
            "id": "563c9043-87e0-4563-8f88-041fde188e50",
            "actions": [
                {
                    "name": "Save_State",
                    "type": "Button",
                    "id": "5e38ce57-4289-4f81-a62d-bdfb305fe85f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Load_State",
                    "type": "Button",
                    "id": "1b6afa41-0302-4d96-a865-6edbeca709a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7879bee0-4202-4b48-903c-541b3bf5daae",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save_State",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "550c974e-5585-4f93-b58d-8aefa3f5216a",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Load_State",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}